# polars-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
example/iris/: lightgbm.ipynb  plot.ipynb  stacking.ipynb
example/spaceship-titanic/: submit.py
src/polars_pipeline/: __init__.py  exception.py  transformer.py  typing.py  utils.py
src/polars_pipeline/functional/: __init__.py  horizontal.py  transformer.py
src/polars_pipeline/model/: __init__.py  lightgbm_model.py  null_predictor.py  predictor.py  stacker.py
src/polars_pipeline/pipeline/: functional.py  model.py  pipeline.py  plot.py  preprocessing.py
src/polars_pipeline/plot/: __init__.py  categorical.py  distributions.py  matrix.py  rational.py  utils.py
src/polars_pipeline/preprocessing/: __init__.py  binarizer.py  label_encoder.py  min_max_scaler.py  robust_scaler.py  standard_scaler.py
test/unit/: test_pipeline.py
test/unit/model/: test_lightgbm.py  test_stacker.py
test/unit/plot/: test_categorical.py  test_distributions.py  test_matrix.py  test_rational.py
test/unit/preprocessing/: test_label.py  test_label_encoder.py  test_min_max_scaler.py  test_robust_scaler.py  test_standard.py
