[project]
name = "polars-pipeline"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "gizmrkv", email = "gizmrkv@gmail.com" }]
dependencies = [
    "polars>=1.1.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "tqdm>=4.66.4",
    "scikit-learn>=1.5.1",
    "pyarrow>=17.0.0",
    "lightgbm>=4.4.0",
    "umap-learn>=0.5.6",
    "pandas>=2.2.2",
    "datashader>=0.16.3",
    "bokeh>=3.4.0, <3.5.0",
    "holoviews>=1.19.1",
    "scikit-image>=0.24.0",
    "colorcet>=3.1.0",
    "dask>=2024.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/polars_pipeline"]

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["F401"]

